--- a/Frontend/src/app/layout/navbar/navbar.component.html
+++ b/Frontend/src/app/layout/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-	<a class="navbar-brand" routerLink="/article">TeamComunicationApp</a>
+	<a class="navbar-brand" routerLink="/">TeamComunicationApp</a>
 	<button class="navbar-toggler">
 		<span class="navbar-toggler-icon"></span>
 	</button>
@@ -9,9 +9,9 @@
 				<a class="nav-link" routerLink="/home">Inicio</a>
 			</li>
 		</ul>
-		<form class="form-inline mt-2 mt-md-0">
+		<form class="form-inline mt-2 mt-md-0" [formGroup]="form">
 			<div class="input-group">
-				<input class="form-control" placeholder="Buscar">
+				<input class="form-control" placeholder="Buscar" formControlName="search">
 				<div class="input-group-append">
 					<button class="btn btn-primary"><i class="fa fa-search"></i></button>
 				</div>
