--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -1,6 +1,7 @@
 @import "~bootstrap/scss/bootstrap";
 $fa-font-path: "../node_modules/font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
+@import '~@syncfusion/ej2-ng-dropdowns/styles/bootstrap.css';
 
 section {
     padding-top: 70px;
